--- a/mySubkeyCrasher.vcxproj
+++ b/mySubkeyCrasher.vcxproj
@@ -156,7 +156,7 @@ cd $(TargetDir)
       <Command>REM  post build event to send exe and pdb files to BugSplat
 @ECHO sending symbol files to BugSplat server (so callstacks will contain file/line# information)
 cd $(TargetDir)
-..\bin\SendPdbs /u Fred@bugsplat.com /p Flintstone /a $(ProjectName) /v 1.0 /b Fred /f "$(TargetName).pdb;$(TargetFileName);BugSplat64.pdb;BugSplat64.dll"
+..\bin\SendPdbs /u fred@bugsplat.com /p Flintstone /a $(ProjectName) /v 1.0 /b Fred /f "$(TargetName).pdb;$(TargetFileName);BugSplat64.pdb;BugSplat64.dll"
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -191,6 +191,7 @@ cd $(TargetDir)
     <ClInclude Include="Doohickey.h" />
     <ClInclude Include="Editor.h" />
     <ClInclude Include="FileSystemUtils.h" />
+    <ClInclude Include="Gadget.h" />
     <ClInclude Include="Gizmo.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -200,6 +201,7 @@ cd $(TargetDir)
     <ClCompile Include="Doohickey.cpp" />
     <ClCompile Include="Editor.cpp" />
     <ClCompile Include="FileSystemUtils.cpp" />
+    <ClCompile Include="Gadget.cpp" />
     <ClCompile Include="Gizmo.cpp" />
     <ClCompile Include="mySubkeyCrasher.cpp" />
     <ClCompile Include="stdafx.cpp" />
